WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148846
Should have a test to make sure links don't navigate after a cancelled force click
https://bugs.webkit.org/show_bug.cgi?id=148846
Summary
Should have a test to make sure links don't navigate after a cancelled force ...
Beth Dakin
Reported
2015-09-04 16:31:37 PDT
Should have a text to make sure links don't navigate after a cancelled force click This would test
http://trac.webkit.org/changeset/188990
Attachments
Patch
(10.44 KB, patch)
2015-09-04 16:34 PDT
,
Beth Dakin
thorton
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-mavericks
(819.01 KB, application/zip)
2015-09-04 17:20 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2015-09-04 16:34:06 PDT
Created
attachment 260649
[details]
Patch
Tim Horton
Comment 2
2015-09-04 16:37:16 PDT
Comment on
attachment 260649
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=260649&action=review
> Tools/ChangeLog:3 > + Should have a text to make sure links don't navigate after a cancelled force
s/text/test/
> Tools/WebKitTestRunner/mac/EventSenderProxy.mm:470 > +void EventSenderProxy::startAndCancelMouseForceClick()
Is this really a fundamental operation? It seems like this is one you should be able to build up from more fine-grained things, so that you can stop changing WKTR and just write tests that use a series of fundamental things. No? But either way is fine :D
Beth Dakin
Comment 3
2015-09-04 16:51:28 PDT
(In reply to
comment #2
)
> Comment on
attachment 260649
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=260649&action=review
> > > Tools/ChangeLog:3 > > + Should have a text to make sure links don't navigate after a cancelled force > > s/text/test/ >
Eep! Thanks!
> > Tools/WebKitTestRunner/mac/EventSenderProxy.mm:470 > > +void EventSenderProxy::startAndCancelMouseForceClick() > > Is this really a fundamental operation? It seems like this is one you should > be able to build up from more fine-grained things, so that you can stop > changing WKTR and just write tests that use a series of fundamental things. > No? > > But either way is fine :D
Tim and I talked about this in person. I do think that this is a fundamental operation, and I think that this is the right approach for these tests.
http://trac.webkit.org/changeset/189400
Build Bot
Comment 4
2015-09-04 17:20:29 PDT
Comment on
attachment 260649
[details]
Patch
Attachment 260649
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/141257
New failing tests: fast/events/cancelled-force-click-link-navigation.html
Build Bot
Comment 5
2015-09-04 17:20:32 PDT
Created
attachment 260655
[details]
Archive of layout-test-results from ews101 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-mavericks Platform: Mac OS X 10.9.5
Beth Dakin
Comment 6
2015-09-04 17:24:39 PDT
Oops! Forgot the expectations. Just committed them:
http://trac.webkit.org/changeset/189406
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug