Should have a test to make sure links don't navigate after a cancelled force click https://bugs.webkit.org/show_bug.cgi?id=148846

Reviewed by Tim Horton.

Tools:

New EventSender function for a started then cancelled force click.
* WebKitTestRunner/EventSenderProxy.h:
* WebKitTestRunner/InjectedBundle/Bindings/EventSendingController.idl:
* WebKitTestRunner/InjectedBundle/EventSendingController.cpp:
(WTR::EventSendingController::mouseForceClick):
(WTR::EventSendingController::startAndCancelMouseForceClick):
(WTR::EventSendingController::mouseForceDown):
* WebKitTestRunner/InjectedBundle/EventSendingController.h:
* WebKitTestRunner/TestController.cpp:
(WTR::TestController::didReceiveSynchronousMessageFromInjectedBundle):
* WebKitTestRunner/mac/EventSenderProxy.mm:
(WTR::EventSenderProxy::mouseForceClick):
(WTR::EventSenderProxy::startAndCancelMouseForceClick):
(WTR::EventSenderProxy::mouseForceDown):
(WTR::EventSenderProxy::mouseMoveTo):

LayoutTests:

* fast/events/cancelled-force-click-link-navigation-expected.txt: Added.
* fast/events/cancelled-force-click-link-navigation.html: Added.



Canonical link: https://commits.webkit.org/166954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189400 268f45cc-cd09-0410-ab3c-d52691b4dbfc