Tools/WebKitTestRunner/InjectedBundle/EventSendingController.h
@@ -47,6 +47,7 @@ public:
     void mouseUp(int button, JSValueRef modifierArray);
     void mouseMoveTo(int x, int y);
     void mouseForceClick();
+    void startAndCancelMouseForceClick();
     void mouseForceDown();
     void mouseForceUp();
     void mouseForceChanged(double force);
